<resources>
    <string name="app_name">UPlan</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="slogan">La app de tus eventos favoritos</string>
    <string name="botonmain">!Comencemos¡ ></string>
    <string name="inisesion">Iniciar sesión </string>
    <string name="contraseña">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="login">Log in ></string>
    <string name="register">Registrate</string>
    <string name="registrar"><u>Registrarse</u></string>
    <string name="nombre">Pepito Perez</string>
    <string name="evento"> Fiesta en Armando hoy para todos </string>
    <string name="email">E-mail</string>
    <string name="registrate">Si no estas registrado, registrate ahora</string>
    <string name="action_settings">Settings</string>
    <string name="nomevento">Nombre del evento</string>
    <string name="title_activity_evento_mapa">Map</string>
    <string name="facebook_app_id">368227421182456</string>
    <string name="fb_login_protocol_scheme">fb368227421182456</string>
    <string name="title_activity_map_manager">Map</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="birth">Fecha de nacimiento</string>
    <string name="fotop">Foto de perfil</string>
    <string name="gustos">Gustos</string>
    <string name="google_maps_key">AIzaSyD_dapcKJ50SFCd88UTen4QmC3XsJUufZ8</string>
</resources>