<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Login">

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="@color/morado"
        android:text=""
        />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:fontFamily="@font/pacifico"
        android:textSize="40sp"
        android:textColor="@color/negro"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/top"
        android:text="@string/app_name" />

    <EditText
        android:id= "@+id/userText"
        android:layout_below="@id/usr"
        android:layout_width="300dp"
        android:layout_marginStart="50dp"
        android:layout_height="35dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/userText"
        android:text="@string/contraseña"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="45dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/tittle"
        android:text="@string/user"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_marginStart="50dp"
        android:layout_height="35dp"
        android:ems="10"
        android:layout_below="@id/cont"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/boton_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/botlogin"
        android:textColor="@color/morado"
        android:textAllCaps="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/morado"
        android:text=""
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/registrarse"
        android:layout_below="@id/boton_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/registrate" />

    <TextView
        android:id="@+id/link_registro"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registrarse"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:textColor="@color/morado"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:focusable="true" />

</RelativeLayout>