<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    android:background="@color/morado">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/titulo"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo2"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fontFamily="@font/pacifico"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blanco"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20sp"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:text="@string/slogan" />

    <Button
        android:id="@+id/comencemos"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:textColor="@color/morado"
        android:background="@drawable/botones"
        android:layout_below="@id/slogan"
        android:layout_centerHorizontal="true"
        android:text="@string/botonmain" />

</RelativeLayout>