<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/inicio"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="@color/morado"
        android:text=""/>


    <EditText
        android:id= "@+id/userText"
        android:layout_below="@id/usr"
        android:layout_width="300dp"
        android:layout_marginStart="50dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/userText"
        android:text="@string/contraseña"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inicio"
        android:layout_marginTop="180dp"
        android:paddingStart="45dp"
        android:paddingBottom="10dp"
        android:text="@string/user"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="300dp"
        android:layout_marginStart="50dp"
        android:layout_height="38dp"
        android:ems="10"
        android:layout_below="@id/cont"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passText"
        android:paddingStart="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/email"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/mailText"
        android:layout_width="300dp"
        android:layout_marginStart="50dp"
        android:layout_height="38dp"
        android:ems="10"
        android:layout_below="@id/email"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields" />


    <Button
        android:id="@+id/boton_registrarse"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_below="@id/mailText"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blanco"
        android:background="@drawable/boton_registrarse"

        android:text="@string/register" />

    <TextView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/morado"
        android:text=""
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/boton_registrarse">

        <Button
            android:background="@color/azulface"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/fb"
            android:textAllCaps="false"
            android:text="Sign up with Facebook"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textColor="@color/blanco" />

        <Button
            android:background="@color/rojogoogle"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/google"
            android:textAllCaps="false"
            android:text="Sign up with Google"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textColor="@color/blanco" />

    </LinearLayout>


</RelativeLayout>