<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".crearEventoConcierto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutCrearEventoConcierto"
        >

        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/nom"
            />

        <TextView
            android:id="@+id/ape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/apellido"
            app:layout_constraintTop_toBottomOf="@id/editNom"/>

        <EditText
            android:id="@+id/editApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/ape"/>

        <TextView
            android:id="@+id/gustos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gustos"
            app:layout_constraintTop_toBottomOf="@id/editApe"/>
        <LinearLayout
            android:id="@+id/linearGustos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gustos">
            <EditText
                android:id="@+id/editGustos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:layout_weight="2"
                android:gravity="start|top"
                android:inputType="textMultiLine"/>
            <Button
                android:id="@+id/botonGustos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botlogin"
                android:onClick="agregarA"
                android:text="Agregar"
                android:textColor="@color/morado"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Seleccionar Fecha:"
            app:layout_constraintTop_toBottomOf="@id/linearGustos"/>

        <LinearLayout
            android:id="@+id/seleccionarFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fecha">

            <TextView
                android:id="@+id/fechaConcierto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:text=""
                android:textSize="18dp"/>
            <Button
                android:id="@+id/botonCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botlogin"
                android:onClick="selecFecha"
                android:text="Fecha"
                android:textColor="@color/morado"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Ubicación"
            app:layout_constraintTop_toBottomOf="@+id/seleccionarFecha"/>
        <LinearLayout
            android:id="@+id/ubicacionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/direccion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:text=""
                android:textSize="18dp"/>
            <Button
                android:id="@+id/botonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botlogin"
                android:onClick="selectPosition"
                android:text="Mapa"
                android:textColor="@color/morado"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/agregarBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ubicacionContainer"
            >
            <TextView
                android:id="@+id/anadirCamara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Añadir Imagen de Galeria"
                android:textColor="@color/morado"
                android:onClick="seleccionarimagen"
                />
            <TextView
                android:id="@+id/anadirImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Añadir Imagen de Camara"
                android:textColor="@color/morado"
                android:onClick="abrirCamara"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agregarBotones"
            app:srcCompat="@drawable/upload"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadImage">

            <Button
                android:id="@+id/terminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botlogin"
                android:onClick="cancelar"
                android:text="Terminar"
                android:textColor="@color/morado"

                />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botlogin"
                android:onClick="cancelar"
                android:text="cancelar"
                android:textColor="@color/morado" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>